--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,26 +41,14 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.8"
-      - name: Upgrade pip
-        run: |
-          python -m pip install --upgrade pip setuptools wheel
-      - name: Install dependencies
-        run: |
-          python -m pip install twine --upgrade
-      - name: Build Wheels
-        run: |
-          python setup.py bdist_wheel
-      - name: Check metadata
-        run: |
-          twine check --strict dist/*
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.12.1
+        env:
+          CIBW_ARCHS_MACOS: auto universal2
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
-          path: dist/*.whl
+          path: ./wheelhouse/*.whl
 
   upload_all:
     name: Upload if release
