--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,8 +7,8 @@ on:
       - main
 
 jobs:
-  build_sdist:
-    name: Build SDist
+  build:
+    name: Build SDist and Wheel
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -25,34 +25,20 @@ jobs:
       - name: Build sdist
         run: |
           python setup.py sdist
+      - name: Build wheel
+        run: |
+          python setup.py bdist_wheel
       - name: Check metadata
         run: |
           twine check --strict dist/*
       - name: Upload
         uses: actions/upload-artifact@v3
         with:
-          path: dist/*.tar.gz
-
-  build_wheels:
-    name: Wheels on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    steps:
-      - uses: actions/checkout@v3
-      - name: Build wheels
-        uses: pypa/cibuildwheel@v2.12.1
-        env:
-          CIBW_ARCHS_MACOS: auto universal2
-      - name: Upload wheels
-        uses: actions/upload-artifact@v3
-        with:
-          path: ./wheelhouse/*.whl
+          path: dist/*
 
   upload_all:
     name: Upload if release
-    needs: [build_wheels, build_sdist]
+    needs: build
     runs-on: ubuntu-latest
     if: github.event_name == 'release' && github.event.action == 'published'
     steps:
